--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 col-md-12">
-        <div id="buttons">
+        <div id="food-buttons">
 
         </div>
       </div>
